# iot-edge-ai-seizure-detection

./: .gitignore  CHANGELOG.md  CODEX_HANDOFF_EpiTwin_Open_V1_V2_Two_Week_Plan.md  DEPLOY_STREAMLIT_COLAB.md  LICENSE  MANIFEST.md  Makefile  PLAYBOOK.md  PROJECT_STATUS.md  PUSH_TO_GITHUB.md  README.md  REPRODUCTION_KIT_README.md  REPRODUCTION_KIT_REPORT.md  RUN_THIS_FIRST.sh  VERIFICATION_RECALL_RF.md  logs-akiroussama-iot-edge-ai-seizure-detection-main-streamlit_app.py-2026-05-10T18_33_37.811Z.txt  pyproject.toml  requirements-pipeline.txt  requirements.txt  streamlit_app.py  vercel.json
.streamlit/: config.toml
article/: Raman_Velmurugan_2025_neurological_iomt.txt
assets/: README.md
bsebench-runner/: repositories.example.yaml
configs/: default.yaml
docs/: A100_RUNBOOK.md  CLAUDE_CODEX_WORKORDER_REREVIEW_2026-05-18.md  CLAUDE_CODE_PROMPTS.md  CLAUDE_PHASE_R_AUDIT_2026-05-15.md  CLAUDE_PHASE_R_REREVIEW_2026-05-17.md  CLAUDE_REVIEW_2026-05-15.md  CLAUDE_TO_CODEX_RECONCILIATION_2026-05-15.md  CLAUDE_TO_CODEX_WORK_ORDER_2026-05-18.md  CLAUDE_TO_CODEX_WORK_ORDER_TASK4_2026-05-20.md  CODEX_PHASE_R2_REMEDIATION_2026-05-15.md  CODEX_PHASE_R3_CLUSTER_AND_POSTICTAL_POLICY_2026-05-16.md  CODEX_REVIEW_PROMPT.md  CODEX_REVIEW_PROMPTS.md  CODEX_TO_CLAUDE_PHASE_R_REVIEW_2026-05-15.md  CODEX_TO_CLAUDE_REVIEW_2026-05-15.md  COMMANDS.md  DATASET_INTEGRATION_PLAN.md  DEPLOYMENT_CHECKLIST.md  END_TO_END_EXECUTION_MAP.md  EPIBENCH_CERTIFICATION_SOP.md  EPIBENCH_IMPLEMENTATION_INDEX.md  EPIBENCH_PHASE1_ADJUDICATION_EXAMPLES.md  EPIBENCH_PHASE1_DETAILED_PLAN.md  EPIBENCH_PROTOCOL.md  (+30 more)
(+765 files in other folders)
