[project]
name = "epitwin-open"
version = "0.1.0"
description = "Leakage-safe clinical forecasting benchmark for wearable seizure-risk modeling."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "EpiTwin-Open Contributors" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scipy>=1.10",
    "pyyaml>=6.0",
]

[project.scripts]
epibench = "src.epibench.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
torch = ["torch>=2.1"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
